Functional search feature with success message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           </button>
         </label>
       </header>
+      <p class="success-msg">Sorry, your search didn't match!</p>
 
       <ul class="student-list">
         <!-- Dynamically insert students here
